--- a/index.html
+++ b/index.html
@@ -3,7 +3,137 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
+    <style>
+        body {
+            color: #444;
+            font-family: Helvetica Neue, Helvetica, Arial, PingFang SC, Hiragino Sans GB, WenQuanYi Micro Hei, Microsoft Yahei, sans-serif;
+            font-size: 87.5%;
+            text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
+            background: #e7e7e7 url(images/body-bg.png) 0 0 repeat;
+            padding: 0;
+            margin: 0;
+        }
+        header {
+            padding-top: 35px;
+            padding-bottom: 25px;
+        }
+        header h1 {
+            font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
+            font-size: 48px;
+            font-weight: 900;
+            line-height: 1.2;
+            color: #303030;
+            letter-spacing: -1px;
+            margin: 0;
+        }
+        h3 {
+            margin-bottom: 8px;
+            font-size: 18px;
+            font-weight: bold;
+            color: #d5000d;
+        }
+        #container {
+            min-height: 595px;
+            background: transparent url(images/highlight-bg.jpg) 50% 0 no-repeat;
+        }
+        #container img {
+            max-width: 100%;
+        }
+        .inner {
+            width: 620px;
+            margin: 0 auto;
+        }
+        hr {
+            height: 1px;
+            padding-bottom: 1em;
+            margin-top: 1em;
+            line-height: 1px;
+            background: transparent url('images/hr.png') 50% 0 no-repeat;
+            border: none;
+        }
+        footer {
+            padding-top: 20px;
+            padding-bottom: 30px;
+            margin-top: 40px;
+            font-size: 13px;
+            color: #aaa;
+            background: transparent url('images/hr.png') 0 0 no-repeat;
+        }
+        #view-on-github span {
+            background: transparent url(images/octocat-icon.png) 12px 50% no-repeat;
+        }
+        .clearfix {
+            display: block;
+        }
+        .clearfix:after {
+            display: block;
+            height: 0;
+            clear: both;
+            visibility: hidden;
+            content: '.';
+        }
+        #downloads {
+            margin-bottom: 40px;
+        }
+        a.button {
+            display: block;
+            float: left;
+            width: 179px;
+            padding: 12px 8px 12px 8px;
+            margin-right: 14px;
+            font-size: 15px;
+            font-weight: bold;
+            line-height: 25px;
+            color: #303030;
+            background: #fdfdfd;
+            background: -moz-linear-gradient(top, #fdfdfd 0%, #f2f2f2 100%);
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fdfdfd), color-stop(100%,#f2f2f2));
+            background: -webkit-linear-gradient(top, #fdfdfd 0%,#f2f2f2 100%);
+            background: -o-linear-gradient(top, #fdfdfd 0%,#f2f2f2 100%);
+            background: -ms-linear-gradient(top, #fdfdfd 0%,#f2f2f2 100%);
+            background: linear-gradient(top, #fdfdfd 0%,#f2f2f2 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', endColorstr='#f2f2f2',GradientType=0 );
+            border-top: solid 1px #cbcbcb;
+            border-right: solid 1px #b7b7b7;
+            border-bottom: solid 1px #b3b3b3;
+            border-left: solid 1px #b7b7b7;
+            border-radius: 30px;
+            -webkit-box-shadow: 10px 10px 5px #888;
+            -moz-box-shadow: 10px 10px 5px #888;
+            box-shadow: 0px 1px 5px #e8e8e8;
+            -moz-border-radius: 30px;
+            -webkit-border-radius: 30px;
+        }
+        a.button:hover {
+            background: #fafafa;
+            background: -moz-linear-gradient(top, #fdfdfd 0%, #f6f6f6 100%);
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fdfdfd), color-stop(100%,#f6f6f6));
+            background: -webkit-linear-gradient(top, #fdfdfd 0%,#f6f6f6 100%);
+            background: -o-linear-gradient(top, #fdfdfd 0%,#f6f6f6 100%);
+            background: -ms-linear-gradient(top, #fdfdfd 0%,#f6f6f6 100%);
+            background: linear-gradient(top, #fdfdfd 0%,#f6f6f6, 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', endColorstr='#f6f6f6',GradientType=0 );
+            border-top: solid 1px #b7b7b7;
+            border-right: solid 1px #b3b3b3;
+            border-bottom: solid 1px #b3b3b3;
+            border-left: solid 1px #b3b3b3;
+        }
+        a.button span {
+            display: block;
+            height: 23px;
+            padding-left: 50px;
+        }
+        a:hover {
+            color: #c5000c;
+        }
+
+        a {
+            text-decoration: none;
+        }
+        a {
+            color: #d5000d;
+        }
+    </style>
     <title>葛佳祥的履历-shellus</title>
 </head>
 
