润色文案，调整措辞

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         body {
             color: #444;
             font-family: Helvetica Neue, Helvetica, Arial, PingFang SC, Hiragino Sans GB, WenQuanYi Micro Hei, Microsoft Yahei, sans-serif;
-            font-size: 87.5%;
+            font-size: 16px;
+            line-height: 28px;
             text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
             background: #e7e7e7 url(images/body-bg.png) 0 0 repeat;
             padding: 0;
@@ -154,38 +155,44 @@
         <section id="main_content">
             <p>【关于我】</p>
             <ul>
-                <li>娃娃脾气， 真名葛佳祥，英文名shellus， 源自“shell us”。</li>
+                <li>娃娃脾气，英文名shellus， 源自“shell us”。</li>
             </ul>
             <ul>
                 <li><p>91年出生，未婚，在山东、河南、广东、福建等地工作过。性格内敛，表达、接受能力强。</p></li>
                 <li><p>
-                    四年Web开发：两年于河南工作，两年联合创办公司，现居深圳龙岗，在一家创业公司担任技术总监。仍然以互联网做为谋生的行业，仍然在不断的尝试作出能改变人们生活的产品，仍然试图凭借自己的努力推动人类发展的进程。</p>
+                    四年Web开发：两年于河南工作，两年联合创办公司，目前在深圳一家创业公司担任技术总监。仍然以互联网做为谋生的行业，仍然在不断的尝试作出能改变人们生活的产品，仍然试图凭借自己的努力推动人类发展的进程。</p>
                 </li>
-                <li><p>对任何技术不追捧，不贬低。关注互联网项目、Web快速开发、Linux等。<br/>
-                    主要编程语言是PHP&amp;laravel，擅长php-worker&amp;WebSocket。</p></li>
-                <li><p>热爱编程，总有一些想法，总是会自己去实现。</p></li>
+                <li><p>拥护开源。专注纯粹的技术，不浮躁，不轻狂、关注Web快速开发、桌面应用开发、跨平台应用开发等。<br/>
+                    主要编程语言是PHP&amp;laravel。</p></li>
+                <li><p>热爱编程，总会有新奇的想法，总会试图去实现。</p></li>
             </ul>
             <p>【我的能力】</p>
             <ul>
-                <li>精通ThinkPHP、Laravel，会使用MongoDB数据库，Redis缓存。基于TP做过两个商城类网站、基于Laravel-console实现兼容至IE8的即时通讯。</li>
+                <li>熟练运用流行的PHP框架，ThinkPHP、Laravel等，深入框架底层，封装composer扩展，编写各类服务驱动。</li>
             </ul>
             <ul>
-                <li>熟悉前端（html5），DVI+CSS(html语义化)，组件复用，协助前端完成模板整合。</li>
+                <li>MySQL熟练，熟悉mysql专有函数，对MySQL大数据优化有自己的见解。</li>
             </ul>
             <ul>
-                <li>熟悉AppCan、APICloud，可以独立完成跨平台APP的开发。</li>
+                <li>深刻理解以空间换取时间的缓存设计，使用过Redis缓存来提升性能。</li>
             </ul>
             <ul>
-                <li>熟悉CentOS，熟练配置LAMP环境，编译常用软件，配置req/s测试（http_load），懂基础优化。</li>
+                <li>云服务：使用过并了解Bae，Sae之类的云服务，和集中式MySQL，Redis，文件系统</li>
             </ul>
             <ul>
-                <li>熟悉视频直播技术，会搭建基于nginx-rtmp-module的直播服务器，实现PC，安卓，IOS的网页直播，防盗链等。</li>
+                <li>熟悉前端（html5），DVI+CSS(html语义化)，组件复用。</li>
             </ul>
             <ul>
-                <li>深入了解过SEO知识，会安装配置开源CMS。</li>
+                <li>熟悉AppCan、APICloud，ionic等跨平台App开发平台。</li>
             </ul>
             <ul>
-                <li>有两年桌面应用开发经验。。。</li>
+                <li>熟悉CentOS，熟练配置LAMP环境，编译常用软件，懂基础优化。</li>
+            </ul>
+            <ul>
+                <li>熟悉视频直播技术，搭建直播服务器，实现PC，安卓，IOS的直播。</li>
+            </ul>
+            <ul>
+                <li>深入了解过SEO知识，使用过流行的CMS，论坛，商城等。</li>
             </ul>
             <hr/>
             <p>【联系】<br/>
