润色文案，调整措辞

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             letter-spacing: -1px;
             margin: 0;
         }
-        h3 {
+        header p {
             margin-bottom: 8px;
             font-size: 18px;
             font-weight: bold;
@@ -143,7 +143,7 @@
     <div class="inner">
         <header>
             <h1>葛佳祥的履历</h1>
-            <h3>支持开源，嵌入式开发爱好者，玩过树莓派、arduino、</h3>
+            <p>支持开源，嵌入式开发爱好者，玩过树莓派、arduino、</p>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -163,36 +163,42 @@
                     四年Web开发：两年于河南工作，两年联合创办公司，目前在深圳一家创业公司担任技术总监。仍然以互联网做为谋生的行业，仍然在不断的尝试作出能改变人们生活的产品，仍然试图凭借自己的努力推动人类发展的进程。</p>
                 </li>
                 <li><p>拥护开源。专注纯粹的技术，不浮躁，不轻狂、关注Web快速开发、桌面应用开发、跨平台应用开发等。<br/>
-                    主要编程语言是PHP&amp;laravel。</p></li>
+                    主要编程语言是PHP &amp; Laravel。</p></li>
                 <li><p>热爱编程，总会有新奇的想法，总会试图去实现。</p></li>
             </ul>
             <p>【我的能力】</p>
             <ul>
-                <li>熟练运用流行的PHP框架，ThinkPHP、Laravel等，深入框架底层，封装composer扩展，编写各类服务驱动。</li>
+                <li>编码：熟练运用流行的PHP框架，<a href="http://www.thinkphp.cn/">ThinkPHP</a>、<a href="https://laravel.com/">Laravel</a>等进行快速开发，并能深入框架底层查看实现。使用、封装<a href="https://packagist.org/">composer</a>扩展，编写各类服务驱动。</li>
             </ul>
             <ul>
-                <li>MySQL熟练，熟悉mysql专有函数，对MySQL大数据优化有自己的见解。</li>
+                <li>MySQL：对MySQL性能优化、数据表设计、索引设计与使用、事物、原子操作有自己的见解并遵守行业内最佳实践。</li>
             </ul>
             <ul>
-                <li>深刻理解以空间换取时间的缓存设计，使用过Redis缓存来提升性能。</li>
+                <li>缓存：深刻理解以空间换取时间的缓存设计，使用过<a href="http://redis.io/">Redis</a>缓存来提升性能。</li>
             </ul>
             <ul>
-                <li>云服务：使用过并了解Bae，Sae之类的云服务，和集中式MySQL，Redis，文件系统</li>
+                <li>Docker：熟练使用<a href="https://hub.docker.com/">docker</a>，<a href="https://www.daocloud.io/">DaoCloud</a>之类的容器云，云端、本地本地命令行的镜像构建，部署，links</li>
             </ul>
             <ul>
-                <li>熟悉前端（html5），DVI+CSS(html语义化)，组件复用。</li>
+                <li>云服务：使用过并了解<a href="https://console.bce.baidu.com/">Bae</a>、<a href="http://sae.sina.com.cn/?m=dashboard">Sae</a>之类的云服务，和基于云平台的分布式MySQL，Redis，文件系统等服务</li>
             </ul>
             <ul>
-                <li>熟悉AppCan、APICloud，ionic等跨平台App开发平台。</li>
+                <li>WEB前端：熟练使用使用前端主流框架<a href="https://github.com/angular/angular">AngularJS</a>, 熟练使用jQuery，封装过jQuery Message插件</li>
             </ul>
             <ul>
-                <li>熟悉CentOS，熟练配置LAMP环境，编译常用软件，懂基础优化。</li>
+                <li>跨平台App开发平台：使用<a href="http://www.appcan.cn/">AppCan</a>、<a href="http://www.apicloud.com/">APICloud</a>、<a href="http://ionicframework.com/">ionic</a>写过App。</li>
             </ul>
             <ul>
-                <li>熟悉视频直播技术，搭建直播服务器，实现PC，安卓，IOS的直播。</li>
+                <li>Linux：日常使用<a href="https://www.centos.org/">CentOS</a>作为调试服务器，熟练编译常用软件。</li>
             </ul>
             <ul>
-                <li>深入了解过SEO知识，使用过流行的CMS，论坛，商城等。</li>
+                <li>嵌入式（物联网）：使用过esp8266 Wifi模块，并使用<a href="https://github.com/esp8266/Arduino">Arduino</a>(C++)、<a href="https://github.com/nodemcu/nodemcu-firmware">Nodemcu</a>(lua)进行编程，搭建<a href="http://mqtt.org/">MQTT</a>作为后端，MQTT-angular作为web交互页面，控制各类传感器，控制器做过一些有趣的应用</li>
+            </ul>
+            <ul>
+                <li>直播技术：搭建直播服务器<a href="https://github.com/arut/nginx-rtmp-module">nginx-rtmp-module</a> ，实现PC，安卓，IOS的直播。熟练使用<a href="http://www.ffmpeg.org/">ffmpeg</a>进行视频处理</li>
+            </ul>
+            <ul>
+                <li>桌面前端：刚开始学习C# WPF桌面应用开发  <small>Date: 2016年6月24日</small></li>
             </ul>
             <hr/>
             <p>【联系】<br/>
