添加统计代码

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             color: #aaa;
             background: transparent url('images/hr.png') 0 0 no-repeat;
         }
+        footer p{
+            text-align: center;
+        }
         #view-on-github span {
             background: transparent url(images/octocat-icon.png) 12px 50% no-repeat;
         }
@@ -234,8 +237,13 @@
         <!-- 多说公共JS代码 end -->
 
         <footer>
-            这个页面托管在 <a href="https://pages.github.com">GitHub Pages</a>. 页面设计 <a
-                href="https://shellus.github.io/">shellus</a>.
+            <p>
+                这个页面托管在 <a href="https://pages.github.com">GitHub Pages</a>. 页面设计 <a href="https://shellus.github.io/">shellus</a>.
+            </p>
+            <p>
+                <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1259658139'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1259658139%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+            </p>
+
         </footer>
 
 
