--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
             padding: 0;
             margin: 0;
         }
+
         header {
             padding-top: 35px;
             padding-bottom: 25px;
         }
+
         header h1 {
             font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
             font-size: 48px;
@@ -27,23 +29,28 @@
             letter-spacing: -1px;
             margin: 0;
         }
+
         header p {
             margin-bottom: 8px;
             font-size: 18px;
             font-weight: bold;
             color: #d5000d;
         }
+
         #container {
             min-height: 595px;
             background: transparent url(images/highlight-bg.jpg) 50% 0 no-repeat;
         }
+
         #container img {
             max-width: 100%;
         }
+
         .inner {
             width: 620px;
             margin: 0 auto;
         }
+
         hr {
             height: 1px;
             padding-bottom: 1em;
@@ -52,6 +59,7 @@
             background: transparent url('images/hr.png') 50% 0 no-repeat;
             border: none;
         }
+
         footer {
             padding-top: 20px;
             padding-bottom: 30px;
@@ -60,15 +68,19 @@
             color: #aaa;
             background: transparent url('images/hr.png') 0 0 no-repeat;
         }
-        footer p{
+
+        footer p {
             text-align: center;
         }
+
         #view-on-github span {
             background: transparent url(images/octocat-icon.png) 12px 50% no-repeat;
         }
+
         .clearfix {
             display: block;
         }
+
         .clearfix:after {
             display: block;
             height: 0;
@@ -76,9 +88,11 @@
             visibility: hidden;
             content: '.';
         }
+
         #downloads {
             margin-bottom: 40px;
         }
+
         a.button {
             display: block;
             float: left;
@@ -91,12 +105,12 @@
             color: #303030;
             background: #fdfdfd;
             background: -moz-linear-gradient(top, #fdfdfd 0%, #f2f2f2 100%);
-            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fdfdfd), color-stop(100%,#f2f2f2));
-            background: -webkit-linear-gradient(top, #fdfdfd 0%,#f2f2f2 100%);
-            background: -o-linear-gradient(top, #fdfdfd 0%,#f2f2f2 100%);
-            background: -ms-linear-gradient(top, #fdfdfd 0%,#f2f2f2 100%);
-            background: linear-gradient(top, #fdfdfd 0%,#f2f2f2 100%);
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', endColorstr='#f2f2f2',GradientType=0 );
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fdfdfd), color-stop(100%, #f2f2f2));
+            background: -webkit-linear-gradient(top, #fdfdfd 0%, #f2f2f2 100%);
+            background: -o-linear-gradient(top, #fdfdfd 0%, #f2f2f2 100%);
+            background: -ms-linear-gradient(top, #fdfdfd 0%, #f2f2f2 100%);
+            background: linear-gradient(top, #fdfdfd 0%, #f2f2f2 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdfdfd', endColorstr='#f2f2f2', GradientType=0);
             border-top: solid 1px #cbcbcb;
             border-right: solid 1px #b7b7b7;
             border-bottom: solid 1px #b3b3b3;
@@ -108,25 +122,28 @@
             -moz-border-radius: 30px;
             -webkit-border-radius: 30px;
         }
+
         a.button:hover {
             background: #fafafa;
             background: -moz-linear-gradient(top, #fdfdfd 0%, #f6f6f6 100%);
-            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fdfdfd), color-stop(100%,#f6f6f6));
-            background: -webkit-linear-gradient(top, #fdfdfd 0%,#f6f6f6 100%);
-            background: -o-linear-gradient(top, #fdfdfd 0%,#f6f6f6 100%);
-            background: -ms-linear-gradient(top, #fdfdfd 0%,#f6f6f6 100%);
-            background: linear-gradient(top, #fdfdfd 0%,#f6f6f6, 100%);
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', endColorstr='#f6f6f6',GradientType=0 );
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fdfdfd), color-stop(100%, #f6f6f6));
+            background: -webkit-linear-gradient(top, #fdfdfd 0%, #f6f6f6 100%);
+            background: -o-linear-gradient(top, #fdfdfd 0%, #f6f6f6 100%);
+            background: -ms-linear-gradient(top, #fdfdfd 0%, #f6f6f6 100%);
+            background: linear-gradient(top, #fdfdfd 0%, #f6f6f6, 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdfdfd', endColorstr='#f6f6f6', GradientType=0);
             border-top: solid 1px #b7b7b7;
             border-right: solid 1px #b3b3b3;
             border-bottom: solid 1px #b3b3b3;
             border-left: solid 1px #b3b3b3;
         }
+
         a.button span {
             display: block;
             height: 23px;
             padding-left: 50px;
         }
+
         a:hover {
             color: #c5000c;
         }
@@ -134,6 +151,7 @@
         a {
             text-decoration: none;
         }
+
         a {
             color: #d5000d;
         }
@@ -146,7 +164,7 @@
     <div class="inner">
         <header>
             <h1>葛佳祥的履历</h1>
-            <p>支持开源，嵌入式开发爱好者，玩过树莓派、arduino、</p>
+            <p>PHP开发者 / 支持开源 / 嵌入式开发爱好者</p>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -158,62 +176,83 @@
         <section id="main_content">
             <p>【关于我】</p>
             <ul>
-                <li>娃娃脾气，英文名shellus， 源自“shell us”。</li>
+                <li>娃娃脾气，英文名shellus， 源自“shell US”。</li>
             </ul>
             <ul>
-                <li><p>91年出生，未婚，在山东、河南、广东、福建等地工作过。性格内敛，表达、接受能力强。</p></li>
-                <li><p>
-                    四年Web开发：两年于河南工作，两年联合创办公司，目前在深圳一家创业公司担任技术总监。仍然以互联网做为谋生的行业，仍然在不断的尝试作出能改变人们生活的产品，仍然试图凭借自己的努力推动人类发展的进程。</p>
+                <li><p>91年出生，未婚，在山东、河南、广东、福建等地工作过。性格内敛，表达、理解能力强。</p></li>
+                <li>
+                    <p>
+                        四年Web开发：2013年于河南工作联合创办公司历时两年，2015年在深圳一家创业公司担任技术总监，
+                    </p>
                 </li>
-                <li><p>拥护开源。专注纯粹的技术，不浮躁，不轻狂、关注Web快速开发、桌面应用开发、跨平台应用开发等。<br/>
-                    主要编程语言是PHP &amp; Laravel。</p></li>
+                <li>
+                    <p>
+                        2016年底至今在马来西亚工作。仍然以互联网做为谋生的行业，仍然在不断的学习保持自己的竞争力，仍然试图凭借自己的努力推动人类发展的进程。
+                    </p>
+                </li>
+                <li><p>拥护开源，专注技术，关注桌面应用开发、<br/>
+                    主要编程语言是PHP (Laravel)</p></li>
                 <li><p>热爱编程，总会有新奇的想法，总会试图去实现。</p></li>
             </ul>
             <p>【我的能力】</p>
             <ul>
-                <li>编码：熟练运用流行的PHP框架，<a href="http://www.thinkphp.cn/">ThinkPHP</a>、<a href="https://laravel.com/">Laravel</a>等进行快速开发，并能深入框架底层查看实现。使用、封装<a href="https://packagist.org/">composer</a>扩展，编写各类服务驱动。</li>
+                <li>编码：熟练运用流行的PHP框架，<a href="http://www.thinkphp.cn/">ThinkPHP</a>、<a href="https://laravel.com/">Laravel</a>等进行快速开发，并能深入框架底层查看实现。
+                </li>
             </ul>
             <ul>
-                <li>MySQL：对MySQL性能优化、数据表设计、索引设计与使用、事物、原子操作有自己的见解并遵守行业内最佳实践。</li>
+                <li>MySQL：日常使用的数据库，能设计健壮的数据结构。合理的索引。性能分析和主从复制配置。</li>
             </ul>
             <ul>
-                <li>缓存：深刻理解以空间换取时间的缓存设计，使用过<a href="http://redis.io/">Redis</a>缓存来提升性能。</li>
+                <li>内存数据库：使用过<a href="http://redis.io/">Redis</a></li>
             </ul>
             <ul>
-                <li>Docker：熟练使用<a href="https://hub.docker.com/">docker</a>，<a href="https://www.daocloud.io/">DaoCloud</a>之类的容器云，云端、本地本地命令行的镜像构建，部署，links</li>
+                <li>云服务：<a href="http://blog.endaosi.com/">我的博客</a>部署在百度<a href="https://console.bce.baidu.com/">Bae</a>的应用引擎
+                </li>
             </ul>
             <ul>
-                <li>云服务：使用过并了解<a href="https://console.bce.baidu.com/">Bae</a>、<a href="http://sae.sina.com.cn/?m=dashboard">Sae</a>之类的云服务，和基于云平台的分布式MySQL，Redis，文件系统等服务</li>
+                <li>WEB前端：用过<a href="https://github.com/angular/angular">AngularJS</a>, 熟练使用jQuery，写过jQuery插件</li>
             </ul>
             <ul>
-                <li>WEB前端：熟练使用使用前端主流框架<a href="https://github.com/angular/angular">AngularJS</a>, 熟练使用jQuery，封装过jQuery Message插件</li>
+                <li>跨平台App开发平台：使用过
+                    <a href="http://www.appcan.cn/">AppCan</a>、
+                    <a href="http://www.apicloud.com/">APICloud</a>、
+                    <a href="http://ionicframework.com/">ionic</a>
+                    这些打包平台。
+                </li>
             </ul>
             <ul>
-                <li>跨平台App开发平台：使用<a href="http://www.appcan.cn/">AppCan</a>、<a href="http://www.apicloud.com/">APICloud</a>、<a href="http://ionicframework.com/">ionic</a>写过App。</li>
+                <li>Linux：日常使用<a href="https://www.centos.org/">Ubuntu</a>，喜欢用apt而不是自己编译软件</li>
             </ul>
             <ul>
-                <li>Linux：日常使用<a href="https://www.centos.org/">CentOS</a>作为调试服务器，熟练编译常用软件。</li>
+                <li>嵌入式（物联网）：使用过esp8266 Wifi模块，并使用<a href="https://github.com/esp8266/Arduino">Arduino</a>(C++)、<a
+                        href="https://github.com/nodemcu/nodemcu-firmware">Nodemcu</a>(lua)进行编程，搭建<a
+                        href="http://mqtt.org/">MQTT</a>作为后端，MQTT-angular作为web交互页面，控制各类传感器，控制器做过一些有趣的应用
+                </li>
             </ul>
             <ul>
-                <li>嵌入式（物联网）：使用过esp8266 Wifi模块，并使用<a href="https://github.com/esp8266/Arduino">Arduino</a>(C++)、<a href="https://github.com/nodemcu/nodemcu-firmware">Nodemcu</a>(lua)进行编程，搭建<a href="http://mqtt.org/">MQTT</a>作为后端，MQTT-angular作为web交互页面，控制各类传感器，控制器做过一些有趣的应用</li>
+                <li>直播技术：搭建直播服务器<a href="https://github.com/arut/nginx-rtmp-module">nginx-rtmp-module</a>
+                    ，实现PC，安卓，IOS的直播。使用过<a href="http://www.ffmpeg.org/">ffmpeg</a>进行视频处理
+                </li>
             </ul>
-            <ul>
-                <li>直播技术：搭建直播服务器<a href="https://github.com/arut/nginx-rtmp-module">nginx-rtmp-module</a> ，实现PC，安卓，IOS的直播。熟练使用<a href="http://www.ffmpeg.org/">ffmpeg</a>进行视频处理</li>
-            </ul>
-            <ul>
-                <li>桌面前端：刚开始学习C# WPF桌面应用开发  <small>Date: 2016年6月24日</small></li>
-            </ul>
-            <hr/>
             <p>【联系】<br/>
                 QQ：353358601<br/>
                 Email：shellus@endaosi.com</p>
             <hr/>
-            <p><strong>我</strong><br/>
-                <img src="images/3524476502.jpg" alt="me.jpg"/><br/>
-                <strong>女友</strong><br/>
-                <img src="images/3633431437.jpg" alt="girl.jpg"/><br/>
-                <strong>我们</strong><br/>
-                <img src="images/3772377354.jpg" alt="m.jpg"/></p>
+            <div>
+                <div style="width: 50%;padding:0px;display: inline-block;float: left;">
+                    <strong>我</strong><br/>
+                    <img width="100%" src="images/3524476502.jpg" alt="me.jpg"/>
+                </div>
+                <div style="width: 50%;padding:0px;display: inline-block;float: left;">
+                    <strong>女友</strong><br/>
+                    <img width="100%" src="images/3633431437.jpg" alt="girl.jpg"/>
+                </div>
+                <span style="float: none"></span>
+            </div>
+
+            <strong>我们</strong><br/>
+            <img src="images/3772377354.jpg" alt="m.jpg"/>
+
         </section>
 
 
@@ -241,7 +280,8 @@
                 这个页面托管在 <a href="https://pages.github.com">GitHub Pages</a>. 页面设计 <a href="https://shellus.github.io/">shellus</a>.
             </p>
             <p>
-                <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1259658139'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1259658139%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+                <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+                document.write(unescape("%3Cspan id='cnzz_stat_icon_1259658139'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1259658139%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
             </p>
 
         </footer>
