--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 </li>
                 <li>
                     <p>
-                        2016年底至今在马来西亚工作。仍然以互联网做为谋生的行业，仍然在不断的学习保持自己的竞争力，仍然试图凭借自己的努力推动人类发展的进程。
+                        2016年底至今在马来西亚一家跨境电商担任PHP开发工作。仍然以互联网做为谋生的行业，仍然在不断学习以保持自己的竞争力，仍然试图凭借自己的努力推动人类发展的进程。
                     </p>
                 </li>
                 <li><p>拥护开源，专注技术，关注桌面应用开发、<br/>
