--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         }
 
         a {
-            color: #d5000d;
+            color: #0007d5;
         }
     </style>
     <title>葛佳祥的履历-shellus</title>
@@ -187,7 +187,7 @@
                 </li>
                 <li>
                     <p>
-                        2016年底至今在马来西亚一家跨境电商担任PHP开发工作。仍然以互联网做为谋生的行业，仍然在不断学习以保持自己的竞争力，仍然试图凭借自己的努力推动人类发展的进程。
+                        2016年底至今在马来西亚一家跨境电商担任PHP开发工作。仍然以互联网做为谋生的行业，仍然在不断学习以保持自己的竞争力，仍然在努力寻找自身价值。
                     </p>
                 </li>
                 <li><p>拥护开源，专注技术，关注桌面应用开发、<br/>
@@ -200,43 +200,35 @@
                 </li>
             </ul>
             <ul>
-                <li>MySQL：日常使用的数据库，能设计健壮的数据结构。合理的索引。性能分析和主从复制配置。</li>
+                <li>MySQL：日常使用的数据库，能设计优雅简洁符合范式的数据库结构，合理的索引，性能分析和调优。</li>
             </ul>
             <ul>
                 <li>内存数据库：使用过<a href="http://redis.io/">Redis</a></li>
             </ul>
             <ul>
-                <li>云服务：<a href="http://blog.endaosi.com/">我的博客</a>部署在百度<a href="https://console.bce.baidu.com/">Bae</a>的应用引擎
+                <li>WEB前端：用过<a href="https://github.com/angular/angular">AngularJS</a>, 熟练使用jQuery，写过jQuery插件，不过近年来很少写前端了</li>
+            </ul>
+            <ul>
+                <li>Linux：日常使用<a href="https://www.ubuntu.com/">Ubuntu</a>，喜欢用 apt ，讨厌自己编译，喜欢使用一键脚本</li>
+            </ul>
+            <ul>
+                <li>物联网：使用过esp8266 Wifi模块，使用<a href="https://github.com/esp8266/Arduino">Arduino</a>进行编程，控制各类传感器，控制器做过一些有趣的应用
                 </li>
             </ul>
             <ul>
-                <li>WEB前端：用过<a href="https://github.com/angular/angular">AngularJS</a>, 熟练使用jQuery，写过jQuery插件</li>
-            </ul>
-            <ul>
-                <li>跨平台App开发平台：使用过
-                    <a href="http://www.appcan.cn/">AppCan</a>、
-                    <a href="http://www.apicloud.com/">APICloud</a>、
-                    <a href="http://ionicframework.com/">ionic</a>
-                    这些打包平台。
+                <li>直播技术：了解常见的视频点播、RTMP、hls直播技术，偶尔使用ffmpeg转码。
                 </li>
             </ul>
             <ul>
-                <li>Linux：日常使用<a href="https://www.centos.org/">Ubuntu</a>，喜欢用apt而不是自己编译软件</li>
-            </ul>
-            <ul>
-                <li>嵌入式（物联网）：使用过esp8266 Wifi模块，并使用<a href="https://github.com/esp8266/Arduino">Arduino</a>(C++)、<a
-                        href="https://github.com/nodemcu/nodemcu-firmware">Nodemcu</a>(lua)进行编程，搭建<a
-                        href="http://mqtt.org/">MQTT</a>作为后端，MQTT-angular作为web交互页面，控制各类传感器，控制器做过一些有趣的应用
-                </li>
-            </ul>
-            <ul>
-                <li>直播技术：搭建直播服务器<a href="https://github.com/arut/nginx-rtmp-module">nginx-rtmp-module</a>
-                    ，实现PC，安卓，IOS的直播。使用过<a href="http://www.ffmpeg.org/">ffmpeg</a>进行视频处理
+                <li>网络精通：对（穿透）防火墙技术有丰富的操作经验。并熟练使用ping、traceroute、nmap等工具测试和扫描。
                 </li>
             </ul>
             <p>【联系】<br/>
+            </p>
+            <div style="padding-left: 2em;">
                 QQ：353358601<br/>
-                Email：shellus@endaosi.com</p>
+                Email：shellus@endaosi.com
+            </div>
             <hr/>
             <div>
                 <div style="width: 50%;padding:0px;display: inline-block;float: left;">
@@ -256,24 +248,6 @@
         </section>
 
 
-        <!-- 多说评论框 start -->
-        <div class="ds-thread" data-thread-key="1" data-title="shellus.github.io"
-             data-url="http://shellus.github.io/"></div>
-        <!-- 多说评论框 end -->
-        <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-        <script type="text/javascript">
-            var duoshuoQuery = {short_name: "shellus"};
-            (function () {
-                var ds = document.createElement('script');
-                ds.type = 'text/javascript';
-                ds.async = true;
-                ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-                ds.charset = 'UTF-8';
-                (document.getElementsByTagName('head')[0]
-                || document.getElementsByTagName('body')[0]).appendChild(ds);
-            })();
-        </script>
-        <!-- 多说公共JS代码 end -->
 
         <footer>
             <p>
